<resources>
    <string name="app_name">Test</string>
    <string name="list_is_empty">No data display</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="ok">Ok</string>
    <string name="no_internet_connection">Please check your internet connections!!</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="country">Country:</string>

</resources>
